--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <p>check out our list of recipes</p>
 <h2>Click on any of the following</h2>
 <ul>
-<li><a href="recipes/salmorejo.html">Salmorejo (Spain)</a></li>
+<li><a href="./recipes/salmorejo.html">Salmorejo (Spain)</a></li>
+<li><a href="./recipes/tortilla.html">Tortilla</a></li>
 </body>
 </html>
